fix: title not centered

--- a/src/app/content/content-footer/content-footer-navigation/content-footer-navigation.component.css
+++ b/src/app/content/content-footer/content-footer-navigation/content-footer-navigation.component.css
@@ -1,3 +1,9 @@
+:host{
+  width: 25%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .previous:not(:last-child) {
   margin-right: 24px;
 }
