--- a/src/app/content/content-footer/content-footer.component.css
+++ b/src/app/content/content-footer/content-footer.component.css
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-app-header-logo, app-header-nav {
+app-header-logo, app-header-nav, app-content-footer-navigation {
   width: 25%;
 }
 
@@ -53,7 +53,7 @@ app-header-nav {
 
 /* mobile */
 @media screen and (max-width: 992px) {
-  app-header-logo, app-header-nav {
+  app-header-logo, app-header-nav, app-content-footer-navigation {
     order: 2;
   }
 
